--- a/1-PWN/0.0-Introduction.md
+++ b/1-PWN/0.0-Introduction.md
@@ -60,3 +60,27 @@ echo 2 | sudo tee /proc/sys/kernel/randomize_va_space
 ```
 
 ---
+
+## Debug Mode Pwntools
+
+### Activer
+```python
+#!/usr/bin/env python3
+from pwn import *
+import subprocess
+
+context.binary = exe = ELF('./chall')
+context.log_level = "debug"
+
+def conn():
+    p = process(exe.path)
+    if args.GDB:
+        subprocess.call(["gdb", "-q", exe.path, "-p", str(p.pid)])
+    return p
+
+p = conn()
+p.interactive()
+```
+
+
+--- 
